--- a/ColorNumber/Storyboard/Base.lproj/Gallary.storyboard
+++ b/ColorNumber/Storyboard/Base.lproj/Gallary.storyboard
@@ -22,20 +22,45 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" red="0.91755962369999999" green="0.91771018510000002" blue="0.91752761599999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="X7H-po-Bsz">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="119" height="130"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyGallaryCollectionViewCell" id="aE4-vh-acb" customClass="LibraryCollectionViewCell" customModule="ColorNumber" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="LibraryCollectionViewCell" id="RVf-5X-UN1" customClass="LibraryCollectionViewCell" customModule="ColorNumber" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="119" height="130"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="119" height="130"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o8e-Rw-RZO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="119" height="130"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                            <real key="value" value="1"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                            <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                            </subviews>
                                         </view>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="o8e-Rw-RZO" secondAttribute="bottom" id="Hii-0X-KdG"/>
+                                            <constraint firstItem="o8e-Rw-RZO" firstAttribute="top" secondItem="RVf-5X-UN1" secondAttribute="top" id="Nmu-cG-QuO"/>
+                                            <constraint firstItem="o8e-Rw-RZO" firstAttribute="leading" secondItem="RVf-5X-UN1" secondAttribute="leading" id="P7P-rB-2uA"/>
+                                            <constraint firstAttribute="trailing" secondItem="o8e-Rw-RZO" secondAttribute="trailing" id="Zq9-ya-MeH"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageIcon" destination="o8e-Rw-RZO" id="DYl-Zx-vfJ"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -56,11 +81,20 @@
                     <tabBarItem key="tabBarItem" title="My gallary" image="ic_mygallarydark" id="gDh-hj-tdB"/>
                     <connections>
                         <outlet property="collectionView" destination="qbb-lX-f7b" id="ztd-pN-UYE"/>
+                        <segue destination="vNF-bh-9le" kind="presentation" identifier="showPaint" id="GBa-qg-LYD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-162" y="619"/>
+            <point key="canvasLocation" x="-162.40000000000001" y="618.44077961019491"/>
+        </scene>
+        <!--UINavigationController-rqN-e5-t8F-->
+        <scene sceneID="Aik-Xw-Y9B">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Paint" referencedIdentifier="UINavigationController-rqN-e5-t8F" id="vNF-bh-9le" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V11-fj-jTb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="683" y="514"/>
         </scene>
     </scenes>
     <resources>
